<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".AddItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:layout_marginTop="10dp">

    <TextView
        style="@style/namePriceQuantityStyle"
        android:layout_marginTop="10dp"
        android:text="@string/item" />

    <TextView
        style="@style/namePriceQuantityStyle"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Price" />

    <TextView
        style="@style/namePriceQuantityStyle"
        android:layout_marginTop="15dp"
        android:text="Quantity" />

    </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_item_name"
                android:hint="@string/name"
                android:inputType="textCapWords"
                style="@style/AddItemFieldStyle" />

            <EditText
                android:id="@+id/edit_item_price"
                android:hint="@string/price"
                android:inputType="number"
                style="@style/AddItemFieldStyle" />

            <EditText
                android:id="@+id/edit_item_quantity"
                android:hint="@string/quantity"
                android:inputType="number"
                style="@style/AddItemFieldStyle" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Category drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_category"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/supplier"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/name"
                android:inputType="text"
                style="@style/AddItemFieldStyle" />
            <EditText
                android:id="@+id/edit_supplier_phone_number"
                android:hint="@string/phone_number"
                android:inputType="phone"
                style="@style/AddItemFieldStyle" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>