<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".AddItemActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/namePriceQuantityStyle"
            android:text="@string/item" />

        <TextView
            android:id="@+id/details_name"
            style="@style/DetailsFieldStyle"
            android:hint="@string/name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/namePriceQuantityStyle"
            android:text="@string/price" />

        <TextView
            android:id="@+id/details_price"
            style="@style/DetailsFieldStyle"
            android:hint="@string/price" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/namePriceQuantityStyle"
            android:text="@string/quantity" />

        <Button
            android:id="@+id/decrease_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="-" />

        <TextView
            android:id="@+id/details_quantity"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:hint="@string/quantity"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColorHint="@color/brightPink" />

        <Button
            android:id="@+id/increase_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="+" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/namePriceQuantityStyle"
            android:text="@string/category" />

        <TextView
            android:id="@+id/details_category"
            style="@style/DetailsFieldStyle"
            android:hint="@string/category" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="25dp">

        <TextView
            style="@style/namePriceQuantityStyle"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingBottom="25dp"
            android:text="@string/supplier" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_supplier_name"
                style="@style/DetailsFieldStyle"
                android:hint="@string/name" />

            <TextView
                android:id="@+id/details_supplier_phone_number"
                style="@style/DetailsFieldStyle"
                android:autoLink="phone"
                android:hint="@string/phone_number" />

            <Button
                android:id="@+id/call_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Call" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>